Mobile css overflow fixes

--- a/src/styles/components/Review.module.scss
+++ b/src/styles/components/Review.module.scss
@@ -140,11 +140,30 @@
 
 @media screen and (max-width: $screen-small){
   .reviewMain {
+
     span:nth-of-type(3) {
       display: block;
       padding-left: 1.8rem;
       position: relative;
       top: -12px;
+    }
+
+    .instructorLink{
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
+      width: 100%;
+      max-width: 110px;
+      display: inline-block;
+      position: relative;
+      top: 4px;
+    }
+
+    & > p {
+      position: relative;
+      top: -2rem;
+      margin-bottom: -1rem;
+      
     }
 
     button {
