--- a/src/styles/components/common/SearchBar.module.scss
+++ b/src/styles/components/common/SearchBar.module.scss
@@ -1,4 +1,5 @@
 @import "../../common/variables.scss";
+@import "../../common/mixins.scss";
 
 .container {
   margin: 1rem;
@@ -33,14 +34,9 @@
     box-shadow: $shadow-small-light;
     z-index: 10;
 
-    // &:focus-within {
+    @include noselect;
 
-    //   & + div {
-    //     display: block;
-    //     z-index: 1;
-    //   }
 
-    // }
   }
 
   .dropdown {
